--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ img.hero {
 h1 {
     font-size: 25px;
     color: hsl(223, 47%, 23%);
-    color: green;
+    color: blue;
     width:  200px;
 }
 p  {
